--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   usb_serial: ^0.5.1
   flutter_riverpod: ^2.4.10
   sensors_plus: ^4.0.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
