--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  usb_serial: ^0.5.1
-  flutter_riverpod: ^2.4.10
-  sensors_plus: ^4.0.2
   shared_preferences: ^2.2.2
+  usb_serial: ^0.5.1
   motion_sensors: ^0.1.0
+  environment_sensors: ^0.3.0
+  geolocator: ^11.0.0
+  flutter_riverpod: ^2.4.10
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +66,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/svgs/Idle.svg
+    - assets/svgs/closed_eyes.svg
+    - assets/svgs/happy_eyes.svg
+    - assets/svgs/angry_eyes.svg
+    - assets/svgs/sad_eyes.svg
+    - assets/svgs/derpy_eyes.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
