--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^11.0.0
   flutter_riverpod: ^2.4.10
   flutter_svg: ^2.0.10+1
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
