--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,18 +31,22 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.2
+  flutter_riverpod: ^2.4.10
+  envied: ^0.5.4+1
+  envied_generator: ^0.5.4+1
+
   usb_serial: ^0.5.1
   motion_sensors: ^0.1.0
   environment_sensors: ^0.3.0
+  camera: ^0.11.0+1
   geolocator: ^11.0.0
-  flutter_riverpod: ^2.4.10
-  lottie: ^3.1.2
+
   auto_size_text: ^3.0.0
+  animated_text_kit: ^4.2.2
+  lottie: ^3.1.2
+
+  google_generative_ai: ^0.4.2
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +58,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
